--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="row">
     <div class="col-md">
        <div class="card" style="width: 18rem;">
-  <img src="dog.jpg" class="card-img-top" alt="...">
+  <img src="clouds.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Tadeja Gregorincic is an aspiring therapist who enjoys chocolate and freshly brewed coffee.</p>
   </div>
