--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
  <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="contact.html">Contact</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Details</a>
@@ -48,7 +48,7 @@
   <div class="row">
     <div class="col-md">
        <div class="card" style="width: 18rem;">
-  <img src="clouds.jpg" class="card-img-top" alt="...">
+  <img src="dog.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Tadeja Gregorincic is an aspiring therapist who enjoys chocolate and freshly brewed coffee.</p>
   </div>
@@ -64,7 +64,7 @@
 </div>
   
   </div>
-  
+  </div>
 
 <div>
 
