--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
   </header>
 
 
-  
-  
   <div class="container">
   <div class="row">
     <div class="col-md">
@@ -54,16 +52,17 @@
   </div>
  <br>
    </div>
-
+    </div>
     <div class="col-md">
      <h2>Hello and welcome!</h2> <p>Here is some place to introduce the website/put latest news or talk about whatever takes your fancy, we can add some cool buttons here or something too.</p><p>Blah blah blah, tum tee tum</p>
-    
     </div>
     
   </div>
+</div>
+  
+  </div>
+  
 
-  
-  
 <div>
 
 <footer class="main-footer">insert footer text here</footer>
