--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <div class="wrapper">
    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: 2d383a;">
-  <a class="navbar-brand" href="#">Navigation</a>
+  <a class="navbar-brand" href="index.html">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
