--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="wrapper">
-   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: 2d383a;">
+   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #99E1D9;">
   <a class="navbar-brand" href="index.html">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
