--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
      <h2>dhufdhfsdhksfd</h2>
      <p>jkdhdkhdsdg, efseskfhesfesf ipsy loremy pipsy ploremy </p>
     </div>
-    <div class="col-md"> wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text </div>
+    <div class="row"> wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text wall of text </div>
   </div>
 </div>
  
