--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
  <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Tadeja Gregorincic</h1>
+    <h1 class="display-4">Tadeja Gregorinčič</h1>
     <p class="lead"></p>
   </div>
 </div>
@@ -48,7 +48,7 @@
        <div class="card" style="width: 18rem;">
   <img src="dog.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Tadeja Gregorincic is an aspiring therapist who enjoys chocolate and freshly brewed coffee.</p>
+    <p class="card-text">Tadeja Gregorinčič is an aspiring therapist who enjoys chocolate and freshly brewed coffee.</p>
   </div>
  <br>
    </div>
@@ -57,6 +57,9 @@
      <h2>Hello and welcome!</h2> <p>Here is some place to introduce the website/put latest news or talk about whatever takes your fancy, we can add some cool buttons here or something too.</p><p>Blah blah blah, tum tee tum</p>
     </div>
     
+      <div class="col-md">
+     <h2>Third column</h2> <p>I wanted to add another column here because I felt like the page had too much white space and I didn't like it.</p><p>I am also bored</p>
+    </div>
   </div>
 </div>
   
