--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="#">Fees and location</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Details</a>
+        <a class="nav-link" href="contact.html">Contact</a>
       </li>
      
       
@@ -50,7 +50,7 @@
     </div>
     <div class="col-md">
        <div class="card" style="width: 19rem;">
-  <img src="dog.jpg" class="card-img-top" alt="...">
+  <img src="tadeja.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Tadeja Gregorinčič is an aspiring therapist who enjoys chocolate and freshly brewed coffee.</p>
   </div>
@@ -58,7 +58,16 @@
    </div>
     </div>
       <div class="col-md">
-     <h2>Third column</h2> <p>I wanted to add another column here because I felt like the page had too much white space and I didn't like it.</p><p>I am also bored</p>
+     <q>
+ "When the other person is hurting, confused, troubled, anxious, alienated, terrified; or when he or she is doubtful of self-worth, uncertain as to identity, then understanding is called for.
+
+ 
+<br><br>
+The gentle and sensitive companionship of an empathic stance... provides illumination and healing. In such situations deep understanding is, I believe, the most precious gift one can give to another."
+
+ </q>
+
+Carl Rogers</h3> 
     </div>
   </div>
 </div>
