--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 <br><br>
 The gentle and sensitive companionship of an empathic stance... provides illumination and healing. In such situations deep understanding is, I believe, the most precious gift one can give to another.</i></b>
 
- </q>
+ </q><br>
 
-Carl Rogers</h3> 
+~ Carl Rogers</h3> 
     </div>
   </div>
 </div>
