--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="wrapper">
-   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:  #99E1D9;">
+   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:  #FBFAD8">
   <a class="navbar-brand" href="#">Navigation</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
