--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div class="row">
     <div class="col-md">
      <h2>Hello and welcome!</h2> <p>Here is some place to introduce the website/put latest news or talk about whatever takes your fancy, we can add some cool buttons here or something too.</p><p>Blah blah blah, tum tee tum</p>
+      <p>Testing, testing 1, 2, 3...
     </div>
     <div class="col-md">
        <div class="card" style="width: 19rem;">
