--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
  <div class="jumbotron jumbotron-fluid">
   <div class="container">
+       <h1 class="display-4">Tadeja Gregorinčič</h1>
+     
     <p class="lead"></p>
   </div>
 </div>
