--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
   </button>
  <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
+       <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
+      </li>
       <li class="nav-item active">
         <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
       </li>
+        <li class="nav-item active">
+        <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
+      </li>
+        <li class="nav-item active">
+        <a class="nav-link" href="about.html">Humanistic and Integrative Psychotherapy<span class="sr-only">(current)</span></a>
+      </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Fees and location</a>
+        <a class="nav-link" href="#">Location & Fees</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contact.html">Contact</a>
