--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
         <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
       </li>
         <li class="nav-item active">
-        <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
-      </li>
-        <li class="nav-item active">
-        <a class="nav-link" href="about.html">Humanistic and Integrative Psychotherapy<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Humanistic and Integrative Psychotherapy<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Location & Fees</a>
