--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="nav-link" href="#">Humanistic and Integrative Psychotherapy<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Location & Fees</a>
+        <a class="nav-link" href="fees.html">Location & Fees</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contact.html">Contact</a>
