--- a/contact.html
+++ b/contact.html
@@ -54,21 +54,21 @@
   <div class="container">
   
     <div class="row">
-    <div class="col-md">
-     <h2>Hello and welcome!</h2> <p>Here is some place to introduce the website/put latest news or talk about whatever takes your fancy, we can add some cool buttons here or something too.</p><p>Blah blah blah, tum tee tum</p>
-      <p>Testing, testing 1, 2, 3...
-    </div>
-  You can contact me to arrange an initial session, which will be an opportunity for us to talk about what brings you to therapy and to get a sense of how we could work together.  
+    <div class="col-md"><p>
+     You can contact me to arrange an initial session, which will be an opportunity for us to talk about what brings you to therapy and to get a sense of how we could work together.  
 
- 
-
+ </p>
+<p>
 Telephone: 07469 074425
-
-
+      </p>
+<p>
  Email: tadeja.g@gmail.com
+      </p>
+<p>
+ Alternatively, you can use this contact form below.
+      </p>
+    </div>
 
-
- Alternatively, you can use this contact form.
     </div>
       <div class="col-md">
      <div class="powr-contact-form" id="39d217d6_1601168438"></div><script src="https://www.powr.io/powr.js?platform=html"></script> 
