--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
    </div>
     </div>
       <div class="col-md">
-     <q>
- <i><b>When the other person is hurting, confused, troubled, anxious, alienated, terrified; or when he or she is doubtful of self-worth, uncertain as to identity, then understanding is called for.
+    <i>  <q>
+<b>When the other person is hurting, confused, troubled, anxious, alienated, terrified; or when he or she is doubtful of self-worth, uncertain as to identity, then understanding is called for.
 
  
 <br><br>
-The gentle and sensitive companionship of an empathic stance... provides illumination and healing. In such situations deep understanding is, I believe, the most precious gift one can give to another.</i></b>
+The gentle and sensitive companionship of an empathic stance... provides illumination and healing. In such situations deep understanding is, I believe, the most precious gift one can give to another.</b>
 
- </q><br>
+ </q></i><br>
 
 ~ Carl Rogers</h3> 
     </div>
