--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@ Telephone: 07469 074425
  Email: tadeja.g@gmail.com
       </p>
 <p>
- Alternatively, you can use this contact form below.
+ Alternatively, you can use this contact form below. Please note, the contact form does not work in Internet Explorer. 
       </p>
     </div>
 
