--- a/fees.html
+++ b/fees.html
@@ -51,10 +51,13 @@
   </header>
 
 
+  
+
   <div class="container">
   
     <div class="row">
-  <p>  As I psychotherapist in training, I offer therapy at reduced rate; I charge £25 per session. Sessions are weekly and last for 50 minutes.
+    <div class="col-md">
+      <p>  As I psychotherapist in training, I offer therapy at reduced rate; I charge £25 per session. Sessions are weekly and last for 50 minutes.
       </p><p>
 I am located in Practice Rooms, 55 Queen Square, BS1 4LH.
       </p><p>
@@ -62,8 +65,20 @@ Due to current Covid-19 pandemic, I also offer online sessions (phone, Zoom or S
 </p>
 
   
+    </div>
+    <div class="col-md">
+       <img class="chairs" src="chairs.jpg">
+ <br>
+   </div>
+    </div>
+     
   </div>
-  <br><br><br>
+</div>
+  
+  </div>
+
+  </div>
+ 
 
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
