--- a/fees.html
+++ b/fees.html
@@ -56,10 +56,10 @@
   <div class="container">
   
     <div class="row">
-    <div class="col-md">
+      <div class="col-md"><h2>Fees</h2>
       <p>  As I psychotherapist in training, I offer therapy at reduced rate; I charge £25 per session. Sessions are weekly and last for 50 minutes.
-      </p><p>
-I am located in Practice Rooms, 55 Queen Square, BS1 4LH.
+      </p><p><h2>
+        I am located in Practice Rooms, 55 Queen Square, BS1 4LH.</h2>
       </p><p>
 Due to current Covid-19 pandemic, I also offer online sessions (phone, Zoom or Skype).
 </p>
