--- a/fees.html
+++ b/fees.html
@@ -67,7 +67,7 @@ Due to current Covid-19 pandemic, I also offer online sessions (phone, Zoom or S
   
     </div>
     <div class="col-md">
-       <img class="chairs" src="chairs.jpg">
+       <img class="chairs" src="chairs.jpg" height="50%" width="50%">
  <br>
    </div>
     </div>
