--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <a class="nav-link" href="#">Location & Fees</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="fees.html">Contact</a>
+        <a class="nav-link" href="fees.html">Contact details</a>
       </li>
     
      
@@ -53,7 +53,7 @@
 
   <div class="container">
   
-    <div class="col-md"><p>
+    <div class="col-md"><h3>Contact</h3><p>
      You can contact me to arrange an initial session, which will be an opportunity for us to talk about what brings you to therapy and to get a sense of how we could work together.  
 
  </p>
