--- a/fees.html
+++ b/fees.html
@@ -58,7 +58,7 @@
     <div class="row">
       <div class="col-md"><h2>Fees</h2>
       <p>  As I psychotherapist in training, I offer therapy at reduced rate; I charge £25 per session. Sessions are weekly and last for 50 minutes.
-      </p><p><h2>Location</h2><br>
+      </p><p><h2>Location</h2>
         I am located in Practice Rooms, 55 Queen Square, BS1 4LH.
       </p><p>
 Due to current Covid-19 pandemic, I also offer online sessions (phone, Zoom or Skype).
