--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,10 @@
 
  </p>
 <p>
-Telephone: 07469 074425
+  <b>Telephone:</b> 07469 074425
       </p>
 <p>
- Email: tadeja.g@gmail.com
+  <b> Email</b>: tadeja.g@gmail.com
       </p>
 <p>
  Alternatively, you can use this contact form below. Please note, the contact form does not work in Internet Explorer. 
