--- a/fees.html
+++ b/fees.html
@@ -42,7 +42,7 @@
 
  <div class="jumbotron jumbotron-fluid">
   <div class="container">
-       <h1 class="display-4">Tadeja Gregorinčič</h1>
+     <b>  <h1 class="display-4">Tadeja Gregorinčič</h1></b>
      
     <p class="lead"></p>
   </div>
@@ -58,7 +58,7 @@
     <div class="row">
       <div class="col-md"><h2>Fees</h2>
       <p>  As I psychotherapist in training, I offer therapy at reduced rate; I charge £25 per session. Sessions are weekly and last for 50 minutes.
-      </p><p><h2>Location</h2>
+      </p><h2>Location</h2><p>
         I am located in Practice Rooms, 55 Queen Square, BS1 4LH.
       </p><p>
 Due to current Covid-19 pandemic, I also offer online sessions (phone, Zoom or Skype).
