--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </nav>
       
        <h1 class="display-4">Tadeja Gregorinčič</h1>
-    <h2 class="display-4">Psychotherapy</h2>
+    <h2 class="subhead">Psychotherapy</h2>
   <header>
 
  <div class="jumbotron jumbotron-fluid">
