--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
  <div class="jumbotron jumbotron-fluid">
   <div class="container">
        <h1 class="display-4">Tadeja Gregorinčič</h1>
+   <h2 class="subhead">Psychotherapy</h2>
      
     <p class="lead"></p>
   </div>
