--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
  <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
        <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="index.html">Welcome</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
@@ -58,11 +58,18 @@
   <div class="container">
   
     <div class="row">
-    <div class="col-md">
-    insert bigoraphy here
-    </div>
-    <div class="col-md">
-       and here?
+     <div class="col-md"><h3>About me</h3>
+   I am in my fourth year of training towards Diploma/MA in Humanistic and Integrative Psychotherapy at Bath Centre for Psychotherapy and Counselling (BCPC).
+<br><br>
+I have completed a Foundation Certificate in Counselling at Bristol City College in 2017.
+<br><br>
+I have been working as a trainee psychotherapist for the past two years.
+<br><br>
+In my practice I draw on several years experience of working in a mental health field, both in the NHS setting (inpatient and community) and voluntary sector. I have been working with clients who have been facing anxiety, depression, loss of hope and motivation, lack of self-worth, regulating emotions, panic attacks, relationship difficulties etc. Many of them have suffered childhood trauma and some developed personality disorders or serious mental illnesses.
+<br><br>
+Other training:
+<br><br>
+I graduated at University of Ljubljana (Slovenia), Faculty of Arts, in 2007 and I hold a BLib degree.
  <br>
    </div>
     </div>
