--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
        <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="index.html">Welcome</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
@@ -55,30 +55,33 @@
   <div class="container">
   
     <div class="row">
-    <div class="col-md">
-     <h2>Hello and welcome!</h2> <p>Here is some place to introduce the website/put latest news or talk about whatever takes your fancy, we can add some cool buttons here or something too.</p><p>Blah blah blah, tum tee tum</p>
-      <p>Testing, testing 1, 2, 3...
+      <div class="col-md"><p><img src="tadejapic.jpg"></p>
+     <h2>Welcome</h2> <p>I’m a Psychotherapist in training, studying towards a Diploma/MA in Humanistic and Integrative Psychotherapy at BCPC in Bath.</p>
+<p>
+As a trainee, I offer therapy at a reduced rate. I am based in central Bristol and due to current Covid-19 restrictions, I also offer telephone, or online sessions.</p>
     </div>
-    <div class="col-md">
+<!--     <div class="col-md">
        <div class="card" style="width: 19rem;">
   <img src="tadeja.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Tadeja Gregorinčič is an aspiring therapist who enjoys chocolate and freshly brewed coffee.</p>
-  </div>
+  </div> -->
  <br>
    </div>
     </div>
       <div class="col-md">
-    <i>  <q>
-<b>When the other person is hurting, confused, troubled, anxious, alienated, terrified; or when he or she is doubtful of self-worth, uncertain as to identity, then understanding is called for.
+    <i>        <p style="text-align:right;">
+“The gentle and sensitive companionship of an<br>
 
- 
-<br><br>
-The gentle and sensitive companionship of an empathic stance... provides illumination and healing. In such situations deep understanding is, I believe, the most precious gift one can give to another.</b>
+empathic stance provides illumination and healing.<br>
 
- </q></i><br><br>
+Deep understanding is, I believe,<br>
 
-~ Carl Rogers</h3> 
+the most precious gift one can give to another."<br>
+</b>
+ </i><br><br>
+
+      ~ Carl Rogers</h3> </p>
     </div>
   </div>
 </div>
