--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="container">
   
     <div class="row">
-      <div class="col-md"><p><img src="tadejapic.jpg"></p>
+      <div class="col-md"><p><img src="tadejapic.jpg" width="400" height="400"></p>
      <h2>Welcome</h2> <p>I’m a Psychotherapist in training, studying towards a Diploma/MA in Humanistic and Integrative Psychotherapy at BCPC in Bath.</p>
 <p>
 As a trainee, I offer therapy at a reduced rate. I am based in central Bristol and due to current Covid-19 restrictions, I also offer telephone, or online sessions.</p>
