--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
  <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
        <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="index.html">Welcome</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
@@ -24,7 +24,7 @@
         <a class="nav-link" href="#">Humanistic and Integrative Psychotherapy<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Location & Fees</a>
+        <a class="nav-link" href="fees.html">Location & Fees</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="fees.html">Contact details</a>
