--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
   <div class="container">
   
     <div class="row">
-     <div class="col-md"><h3>About me</h3>
+     <div class="col-md"><h3>About me</h3><br>
    I am in my fourth year of training towards Diploma/MA in Humanistic and Integrative Psychotherapy at Bath Centre for Psychotherapy and Counselling (BCPC).
 <br><br>
 I have completed a Foundation Certificate in Counselling at Bristol City College in 2017.
