--- a/fees.html
+++ b/fees.html
@@ -15,7 +15,7 @@
  <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
        <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="index.html">Welcome</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
@@ -61,7 +61,7 @@
       <p>  As I psychotherapist in training, I offer therapy at reduced rate; I charge £25 per session. Sessions are weekly and last for 50 minutes.
       </p><h2>Location</h2><p>
         I am located in Practice Rooms, 55 Queen Square, BS1 4LH.
-      </p><p>
+      <br>
 Due to current Covid-19 pandemic, I also offer online sessions (phone, Zoom or Skype).
 </p>
 
