--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ As a trainee, I offer therapy at a reduced rate. I am based in central Bristol a
   <div class="card-body">
     <p class="card-text">Tadeja Gregorinčič is an aspiring therapist who enjoys chocolate and freshly brewed coffee.</p>
   </div> -->
- <br>
+<!--  <br>
    </div>
-    </div>
+    </div> -->
       <div class="col-md">
     <i>        <p style="text-align:right;">
 “The gentle and sensitive companionship of an<br>
