--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
   <div class="container">
   
     <div class="row">
-      <div class="col-md"><p><img src="tadejapic.jpg" width="400" height="400"></p>
+     </p>
      <h2>Welcome</h2> <p>I’m a Psychotherapist in training, studying towards a Diploma/MA in Humanistic and Integrative Psychotherapy at BCPC in Bath.</p>
 <p>
 As a trainee, I offer therapy at a reduced rate. I am based in central Bristol and due to current Covid-19 restrictions, I also offer telephone, or online sessions.</p>
     </div>
-<!--     <div class="col-md">
-       <div class="card" style="width: 19rem;">
+ <div class="col-md"> <div class="col-md"><p><img src="tadejapic.jpg" width="400" height="400">
+<!--        <div class="card" style="width: 19rem;">
   <img src="tadeja.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Tadeja Gregorinčič is an aspiring therapist who enjoys chocolate and freshly brewed coffee.</p>
-  </div> -->
-<!--  <br>
-   </div>
-    </div> -->
+  </div>
+ <br>
+   </div> -->
+    </div>
       <div class="col-md">
     <i>        <p style="text-align:right;">
 “The gentle and sensitive companionship of an<br>
