--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
   
     <div class="row">
      </p>
-     <h2>Welcome</h2> <p>I’m a Psychotherapist in training, studying towards a Diploma/MA in Humanistic and Integrative Psychotherapy at BCPC in Bath.</p>
+     <h2>Welcome</h2> 
+    
+ <div class="col-md"><p>I’m a Psychotherapist in training, studying towards a Diploma/MA in Humanistic and Integrative Psychotherapy at BCPC in Bath.</p>
 <p>
-As a trainee, I offer therapy at a reduced rate. I am based in central Bristol and due to current Covid-19 restrictions, I also offer telephone, or online sessions.</p>
-    </div>
- <div class="col-md"> <div class="col-md"><p><img src="tadejapic.jpg" width="400" height="400">
+As a trainee, I offer therapy at a reduced rate. I am based in central Bristol and due to current Covid-19 restrictions, I also offer telephone, or online sessions.</p></div> 
+    
+    <div class="col-md"><p><img src="tadejapic.jpg" width="300" height="300">
 <!--        <div class="card" style="width: 19rem;">
   <img src="tadeja.jpg" class="card-img-top" alt="...">
   <div class="card-body">
